--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
-  <a href="">2018</a>
+  <a href="2018.html">2018</a>
   <a href="">Draft</a>
   <a href="">History</a>
   <a href="">Rules</a>
   <a href="">Members</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="dropDown()">&#9776;</a>
 </div>
+
+<div class="wrapper">
 
 <!--Main Banner-->
 
@@ -40,13 +42,13 @@
     <div class="recap col">
 			<h1>Welcome</h1>
 				<p>I know none of you will, but the page is a work in progress, so be nice.  This will get us up to the draft, without you guys texting me all the time about keepers and draft picks.</p>
-        <p>Things you can do as of now:<br>
-        <u>2018</u> - This will show you last year's keepers, draft picks trades, and draft order.  After the draft you will see a Transaction Log aka Trade Tracker and Who's paid appear as well.<br>
-        <u>Draft</u> - This will have a blank draft board that will updated once draft order is set, keepers are decided.<br>
+        <p class="center-text">Things you can do as of now:</p>
+        <p><u>2018</u> - This will show you last year's keepers, draft picks trades, and draft order.  After the draft you will see a Transaction Log aka Trade Tracker and Who's paid appear as well.</p>
+        <p><u>Draft</u> - This will have a last year's draft board to make it easier to figure out keepers, and that will also be updated once draft order is set, keepers are decided for 2018.</p>
         </p>
         <p>You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
-        <p>Figure out a way to break a preview the first paragraph and link to rest</p>
-        <button>Continue</button>
+        <p>Figure out a way to break a preview the first paragraph and link to rest via more button.</p>
+        <button>More</button>
 		</div>
 
     <div class="secondary-content">
@@ -158,7 +160,7 @@
         <p><u>Draft Lottery</u><br>
         <p>
         When: July 1st<br>
-        Where: Fish's Basement<br>
+        Where: Staten's Undetermined Doomsday Bunker<br>
         Time: Noon<br>
         </p>
         </p>
@@ -180,6 +182,7 @@
 
 	</div>
 
+</div>
 </div>
 
 <!--Footer-->
