added in draft boards

--- a/2018.html
+++ b/2018.html
@@ -16,7 +16,7 @@
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="2018.html">2018</a>
-  <a href="">Draft</a>
+  <a href="draft.html">Draft</a>
   <a href="">History</a>
   <a href="">Rules</a>
   <a href="">Members</a>
@@ -106,7 +106,7 @@
 		<div class="keepers col">
 			<h2>Keepers</h2>
 
-      <p class="center-text">Click on <a href="">Draft</a> to view last year's board</p>
+      <p class="center-text">Click on <a href="draft.html">Draft</a> to view last year's board</p>
 
         <div class="keepers1">
           <h4>JP Fischer</h4>
