--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="2018.html">2018</a>
-  <a href="">Draft</a>
+  <a href="draft.html">Draft</a>
   <a href="">History</a>
   <a href="">Rules</a>
   <a href="">Members</a>
@@ -41,14 +41,41 @@
 
     <div class="recap col">
 			<h1>Welcome</h1>
-				<p>I know none of you will, but the page is a work in progress, so be nice.  This will get us up to the draft, without you guys texting me all the time about keepers and draft picks.</p>
-        <p class="center-text">Things you can do as of now:</p>
+				<p>I know none of you will, but the site is a work in progress, so be nice.  This will get us up to the draft, without you guys texting me all the time about keepers and draft picks.</p>
+        <h5 class="center-text"><u>Things you can do as of now</u></h5>
         <p><u>2018</u> - This will show you last year's keepers, draft picks trades, and draft order.  After the draft you will see a Transaction Log aka Trade Tracker and Who's paid appear as well.</p>
         <p><u>Draft</u> - This will have a last year's draft board to make it easier to figure out keepers, and that will also be updated once draft order is set, keepers are decided for 2018.</p>
         </p>
         <p>You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
-        <p>Figure out a way to break a preview the first paragraph and link to rest via more button.</p>
         <button>More</button>
+        <p>Figure out a way to break a preview the first paragraph and link to rest via more button.</p>
+        <h5 class="center-text"><u>List of Unkeepable Players</u></h5>
+        <div class="keepers-2017">
+          <ul>
+            <li>Dez Bryant</li>
+            <li>LeSean McCoy</li>
+            <li>Odell Beckham Jr.</li>
+            <li>Antonio Brown</li>
+            <li>Le'Veon Bell</li>
+            <li>Mike Evans</li>
+            <li>Jordy Nelson</li>
+            <li>Aaron Rodgers</li>
+            <li>Greg Olsen</li>
+            <li>Melvin Gordon</li>
+            <li>T.Y. Hilton</li>
+            <li>DeMarco Murray</li>
+            <li>Tom Brady</li>
+            <li>Drew Brees</li>
+            <li>Jay Ajayi</li>
+            <li>Jimmy Graham</li>
+            <li>Jordan Howard</li>
+            <li>Spencer Ware</li>
+            <li>Terrell Pryor</li>
+            <li>Mike Wallace</li>
+            <li>Michael Thomas</li>
+            <li>Ty Montgomery</li>
+          </ul>
+        </div>
 		</div>
 
     <div class="secondary-content">
@@ -140,7 +167,7 @@
             <td>3</td>
             <td>10</td>
             <td>9</td>
-            <td>1413</td>
+            <td>1,413</td>
           </tr>
           <tr class="loser">
             <td>Show Me Potato Salad</td>
@@ -167,7 +194,7 @@
         <p><u>Keepers</u><br>
         <p>
         When: Either August 20th or August 27 (depends on draft)<br>
-        Click on <a href="">Draft</a> to view last year's board<br>
+        Click on <a href="draft.html">Draft</a> to view last year's board<br>
         Reminder:  You can keep up to 2 players<br>
         </p>
         </p>
