colored button and added a few keepers

--- a/draft.html
+++ b/draft.html
@@ -349,7 +349,7 @@
           <td>204</td>
           <td>203</td>
           <td>202</td>
-          <td>201</td>
+          <td class="rb keeper">Davlin Cook</td>
         </tr>
         <tr>
           <td>Round 3</td>
@@ -499,7 +499,7 @@
           <td>1204</td>
           <td>1203</td>
           <td>1202</td>
-          <td>1201</td>
+          <td class="rb keeper">Alvin Kamara</td>
         </tr>
         <tr>
           <td>Round 13</td>
