added in history page

--- a/2018.html
+++ b/2018.html
@@ -17,7 +17,7 @@
   <a href="index.html" class="active">Home</a>
   <a href="2018.html">2018</a>
   <a href="draft.html">Draft</a>
-  <a href="">History</a>
+  <a href="history.html">History</a>
   <a href="">Rules</a>
   <a href="">Members</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="dropDown()">&#9776;</a>
