updated README and made button hide text

--- a/history.html
+++ b/history.html
@@ -40,9 +40,11 @@
 
 <!--League Records -->
 
-    <div class="records col">
+    <div class="col">
 			<h1>League Records</h1>
-      <div class="player-records">
+
+    <div class="records">
+      <div class="regular-season-records">
         <h3>Regular Season Records</h3>
         <table>
           <tr class="table-header">
@@ -137,102 +139,107 @@
             <td>32.1%</td>
           </tr>
         </table>
-        <h3>Playoff Records</h3>
-        <table>
-          <tr class="table-header">
-            <th>Name</th>
-            <th>Wins</th>
-            <th>Loses</th>
-            <th>%</th>
-            <th>Titles</th>
-          </tr>
-          <tr>
-            <td>Ben Nohalty</td>
-            <td>10</td>
-            <td>2</td>
-            <td>83.3%</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Josh Staten</td>
-            <td>11</td>
-            <td>4</td>
-            <td>73.3%</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Jared Knight</td>
-            <td>6</td>
-            <td>3</td>
-            <td>66.6%</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>Nathan Marshall</td>
-            <td>6</td>
-            <td>5</td>
-            <td>54.5%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Frank White</td>
-            <td>5</td>
-            <td>5</td>
-            <td>50.0%</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>JP Fischer</td>
-            <td>5</td>
-            <td>5</td>
-            <td>50.0%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Evan Brown</td>
-            <td>3</td>
-            <td>4</td>
-            <td>42.9%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Matthew Bozell</td>
-            <td>3</td>
-            <td>7</td>
-            <td>30.0%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Justin Marshall</td>
-            <td>2</td>
-            <td>7</td>
-            <td>22.1%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Aaron Zoller</td>
-            <td>0</td>
-            <td>1</td>
-            <td>00.0%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Michael Lofton</td>
-            <td>0</td>
-            <td>2</td>
-            <td>00.0%</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Matt Gibson</td>
-            <td>0</td>
-            <td>3</td>
-            <td>00.0%</td>
-            <td></td>
-          </tr>
-        </table>
       </div>
+
+        <div class="playoff-records">
+          <h3>Playoff Records</h3>
+          <table>
+            <tr class="table-header">
+              <th>Name</th>
+              <th>Wins</th>
+              <th>Loses</th>
+              <th>%</th>
+              <th>Titles</th>
+            </tr>
+            <tr>
+              <td>Ben Nohalty</td>
+              <td>10</td>
+              <td>2</td>
+              <td>83.3%</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>Josh Staten</td>
+              <td>11</td>
+              <td>4</td>
+              <td>73.3%</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>Jared Knight</td>
+              <td>6</td>
+              <td>3</td>
+              <td>66.6%</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Nathan Marshall</td>
+              <td>6</td>
+              <td>5</td>
+              <td>54.5%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Frank White</td>
+              <td>5</td>
+              <td>5</td>
+              <td>50.0%</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>JP Fischer</td>
+              <td>5</td>
+              <td>5</td>
+              <td>50.0%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Evan Brown</td>
+              <td>3</td>
+              <td>4</td>
+              <td>42.9%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Matthew Bozell</td>
+              <td>3</td>
+              <td>7</td>
+              <td>30.0%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Justin Marshall</td>
+              <td>2</td>
+              <td>7</td>
+              <td>22.1%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Aaron Zoller</td>
+              <td>0</td>
+              <td>1</td>
+              <td>00.0%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Michael Lofton</td>
+              <td>0</td>
+              <td>2</td>
+              <td>00.0%</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Matt Gibson</td>
+              <td>0</td>
+              <td>3</td>
+              <td>00.0%</td>
+              <td></td>
+            </tr>
+          </table>
+      </div>
+
 		</div>
+    </div>
 
     <div class="secondary-content">
 
