--- a/index.html
+++ b/index.html
@@ -45,38 +45,40 @@
         <h5 class="center-text"><u>Things you can do as of now</u></h5>
         <p><u>2018</u> - This will show you last year's keepers, draft picks trades, and draft order.  After the draft you will see a Transaction Log aka Trade Tracker and Who's paid appear as well.</p>
         <p><u>Draft</u> - This will have a last year's draft board to make it easier to figure out keepers, and that will also be updated once draft order is set, keepers are decided for 2018.</p>
-        </p>
+        <p><u>History</u> - This is still a work, we have a lot of history to input.  But for now, we've got the league records loaded in</p>
         <p>You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
-        <button>More</button>
-        <p>Figure out a way to break a preview the first paragraph and link to rest via more button.</p>
-        <h5 class="center-text"><u>List of Unkeepable Players</u></h5>
-        <div class="keepers-2017">
-          <ul>
-            <li>Dez Bryant</li>
-            <li>LeSean McCoy</li>
-            <li>Odell Beckham Jr.</li>
-            <li>Antonio Brown</li>
-            <li>Le'Veon Bell</li>
-            <li>Mike Evans</li>
-            <li>Jordy Nelson</li>
-            <li>Aaron Rodgers</li>
-            <li>Greg Olsen</li>
-            <li>Melvin Gordon</li>
-            <li>T.Y. Hilton</li>
-            <li>DeMarco Murray</li>
-            <li>Tom Brady</li>
-            <li>Drew Brees</li>
-            <li>Jay Ajayi</li>
-            <li>Jimmy Graham</li>
-            <li>Jordan Howard</li>
-            <li>Spencer Ware</li>
-            <li>Terrell Pryor</li>
-            <li>Mike Wallace</li>
-            <li>Michael Thomas</li>
-            <li>Ty Montgomery</li>
-          </ul>
-        </div>
-		</div>
+        <p class="center-text">Click on the "More" below to see last years keepers</p>
+        <button onclick="myFunction()">More</button>
+        <div id="toggle" class="hidden">
+          <h5 class="center-text"><u>List of Unkeepable Players</u></h5>
+          <div class="keepers-2017">
+            <ul>
+              <li>Dez Bryant</li>
+              <li>LeSean McCoy</li>
+              <li>Odell Beckham Jr.</li>
+              <li>Antonio Brown</li>
+              <li>Le'Veon Bell</li>
+              <li>Mike Evans</li>
+              <li>Jordy Nelson</li>
+              <li>Aaron Rodgers</li>
+              <li>Greg Olsen</li>
+              <li>Melvin Gordon</li>
+              <li>T.Y. Hilton</li>
+              <li>DeMarco Murray</li>
+              <li>Tom Brady</li>
+              <li>Drew Brees</li>
+              <li>Jay Ajayi</li>
+              <li>Jimmy Graham</li>
+              <li>Jordan Howard</li>
+              <li>Spencer Ware</li>
+              <li>Terrell Pryor</li>
+              <li>Mike Wallace</li>
+              <li>Michael Thomas</li>
+              <li>Ty Montgomery</li>
+            </ul>
+          </div>
+		    </div>
+    </div>
 
     <div class="secondary-content">
 
