--- a/history.html
+++ b/history.html
@@ -260,15 +260,18 @@
 
       <div class="prior-seasons col">
         <h2>Past Seasons</h2>
-        <h5><button>2017</button></h5>
-        <h5><button>2016</button></h5>
-        <h5><button>2015</button></h5>
-        <h5><button>2014</button></h5>
-        <h5><button>2013</button></h5>
-        <h5><button>2012</button></h5>
-        <h5><button>2011</button></h5>
-        <h5><button>2010</button></h5>
+        <div class="history-buttons">
+          <button>2017</button>
+          <button>2016</button>
+          <button>2015</button>
+          <button>2014</button>
+          <button>2013</button>
+          <button>2012</button>
+          <button>2011</button>
+          <button>2010</button>
+        </div>
       </div>
+
 
   </div>
 
