--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <h5 class="center-text"><u>Things you can do as of now</u></h5>
         <p><u>2018</u> - This will show you last year's keepers, draft picks trades, and draft order.  After the draft you will see a Transaction Log aka Trade Tracker and Who's paid appear as well.</p>
         <p><u>Draft</u> - This will have a last year's draft board to make it easier to figure out keepers, and that will also be updated once draft order is set, keepers are decided for 2018.</p>
-        <p><u>History</u> - This is still a work, we have a lot of history to input.  But for now, we've got the league records loaded in</p>
-        <p>You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
+        <p><u>History</u> - This is still a work in progress, we have a lot of history to input.  But for now, we've got the league records loaded in</p>
+        <p class="center-text">You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
         <p class="center-text">Click on the "More" below to see last years keepers</p>
         <button onclick="myFunction()">More</button>
         <div id="toggle" class="hidden">
