--- a/2018.html
+++ b/2018.html
@@ -111,8 +111,8 @@
         <div class="keepers1">
           <h4>JP Fischer</h4>
           <p>
-            1. Dalvin Cook - Round 2<br />
-            2. Alvin Kamara - Round 12
+            1. Dalvin Cook - Rd 2<br />
+            2. Alvin Kamara - Rd 12
           </p>
           <h4>Ben Nohalty</h4>
           <p>
@@ -192,6 +192,33 @@
       <p>
         1. Evan Brown's 8th Round Pick
       </p>
+      <h2>2017 Keepers</h2>
+      <div class="keepers-2017">
+        <ul>
+          <li>Dez Bryant</li>
+          <li>LeSean McCoy</li>
+          <li>Odell Beckham Jr.</li>
+          <li>Antonio Brown</li>
+          <li>Le'Veon Bell</li>
+          <li>Mike Evans</li>
+          <li>Jordy Nelson</li>
+          <li>Aaron Rodgers</li>
+          <li>Greg Olsen</li>
+          <li>Melvin Gordon</li>
+          <li>T.Y. Hilton</li>
+          <li>DeMarco Murray</li>
+          <li>Tom Brady</li>
+          <li>Drew Brees</li>
+          <li>Jay Ajayi</li>
+          <li>Jimmy Graham</li>
+          <li>Jordan Howard</li>
+          <li>Spencer Ware</li>
+          <li>Terrell Pryor</li>
+          <li>Mike Wallace</li>
+          <li>Michael Thomas</li>
+          <li>Ty Montgomery</li>
+        </ul>
+      </div>
 		</div>
 
 	</div>
