--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <a href="2018.html">2018</a>
   <a href="draft.html">Draft</a>
   <a href="history.html">History</a>
-  <a href="">Rules</a>
+  <a href="rules.html">Rules</a>
   <a href="">Members</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="dropDown()">&#9776;</a>
 </div>
@@ -53,28 +53,28 @@
           <h5 class="center-text"><u>List of Unkeepable Players</u></h5>
           <div class="keepers-2017">
             <ul>
-              <li>Dez Bryant</li>
-              <li>LeSean McCoy</li>
+              <li>Jay Ajayi</li>
               <li>Odell Beckham Jr.</li>
-              <li>Antonio Brown</li>
               <li>Le'Veon Bell</li>
-              <li>Mike Evans</li>
-              <li>Jordy Nelson</li>
-              <li>Aaron Rodgers</li>
-              <li>Greg Olsen</li>
-              <li>Melvin Gordon</li>
-              <li>T.Y. Hilton</li>
-              <li>DeMarco Murray</li>
               <li>Tom Brady</li>
               <li>Drew Brees</li>
-              <li>Jay Ajayi</li>
+              <li>Antonio Brown</li>
+              <li>Dez Bryant</li>
+              <li>Mike Evans</li>
+              <li>Melvin Gordon</li>
               <li>Jimmy Graham</li>
+              <li>T.Y. Hilton</li>
               <li>Jordan Howard</li>
-              <li>Spencer Ware</li>
-              <li>Terrell Pryor</li>
-              <li>Mike Wallace</li>
-              <li>Michael Thomas</li>
+              <li>LeSean McCoy</li>
               <li>Ty Montgomery</li>
+              <li>DeMarco Murray</li>
+              <li>Jordy Nelson</li>
+              <li>Greg Olsen</li>
+              <li>Terrell Pryor</li>
+              <li>Michael Thomas</li>
+              <li>Aaron Rodgers</li>
+              <li>Mike Wallace</li>
+              <li>Spencer Ware</li>
             </ul>
           </div>
 		    </div>
