added Members page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="draft.html">Draft</a>
   <a href="history.html">History</a>
   <a href="rules.html">Rules</a>
-  <a href="">Members</a>
+  <a href="members.html">Members</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="dropDown()">&#9776;</a>
 </div>
 
@@ -42,10 +42,12 @@
     <div class="recap col">
 			<h1>Welcome</h1>
 				<p>I know none of you will, but the site is a work in progress, so be nice.  This will get us up to the draft, without you guys texting me all the time about keepers and draft picks.</p>
-        <h5 class="center-text"><u>Things you can do as of now</u></h5>
+        <h5 class="center-text"><u>Site Navigation</u></h5>
         <p><u>2018</u> - This will show you last year's keepers, draft picks trades, and draft order.  After the draft you will see a Transaction Log aka Trade Tracker and Who's paid appear as well.</p>
         <p><u>Draft</u> - This will have a last year's draft board to make it easier to figure out keepers, and that will also be updated once draft order is set, keepers are decided for 2018.</p>
-        <p><u>History</u> - This is still a work in progress, we have a lot of history to input.  But for now, we've got the league records loaded in</p>
+        <p><u>History</u> - This is still a work in progress, we have a lot of history to input.  But for now, we've got the league records loaded in.</p>
+        <p><u>Rules</u> - This will show your our vast libary of rules, regulations, and scoring system.</p>
+        <p><u>Members</u> - Nothing really here now, but will eventually have something.</p>
         <p>You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
         <p class="center-text">Click on the "More" below to see last years keepers</p>
         <button onclick="myFunction()">More</button>
