--- a/2018.html
+++ b/2018.html
@@ -19,7 +19,7 @@
   <a href="draft.html">Draft</a>
   <a href="history.html">History</a>
   <a href="rules.html">Rules</a>
-  <a href="">Members</a>
+  <a href="members.html">Members</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="dropDown()">&#9776;</a>
 </div>
 
