--- a/rules.html
+++ b/rules.html
@@ -19,7 +19,7 @@
   <a href="draft.html">Draft</a>
   <a href="history.html">History</a>
   <a href="rules.html">Rules</a>
-  <a href="">Members</a>
+  <a href="members.html">Members</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="dropDown()">&#9776;</a>
 </div>
 
@@ -94,7 +94,7 @@
             Seed 4: 10% (903-1001 Combinations)
           </p>
         <h4>Combinations</h4>
-          <a href="https://docs.google.com/document/d/1KyR3sSisJ6sf_gMBjt2dbJL_kbR2iWZfGJdCbZXbubE/edit?usp=sharing">Link to Numbered Combinations</a>
+          <a target="blank" href="https://docs.google.com/document/d/1KyR3sSisJ6sf_gMBjt2dbJL_kbR2iWZfGJdCbZXbubE/edit?usp=sharing">Link to Numbered Combinations</a>
         <img class="lottery-photo" src="img/lottery.png" />
     </div>
 
