--- a/members.html
+++ b/members.html
@@ -49,6 +49,8 @@
         <button>Frank White</button>
         <button>Jared Knight</button>
         <button>JP Fischer</button>
+      </div>
+      <div class="member-buttons">
         <button>Josh Staten</button>
         <button>Justin Marshall</button>
         <button>Matt Gibson</button>
