--- a/rules.html
+++ b/rules.html
@@ -50,7 +50,7 @@
         <p>Allowed, including draft picks and future draft picks</p>
         <p>Trades can be made from the end of the draft lottery up until the trade deadline annualy.</p>
       <h4>Keepers</h4>
-        <p>You can each pick two player from last year's roster at the spot they were drafted or if a waiver wire pickup, round 16. A player once before they go back to the draft pool</p>
+        <p>You can each pick two player from last year's roster at the spot they were drafted or if a waiver wire pickup, round 16. A player can only be kept once before they go back to the draft pool</p>
       <h4>FAAB</h4>
         <p>$250 Starting Budget</p>
         <p>Additional FAAB may be purchased for real cash that will be put towards beer at the draft</p>
