--- a/rules.html
+++ b/rules.html
@@ -28,7 +28,7 @@
 <!--Main Banner-->
 
   <div class="banner">
-    <img class="top-photo" src="img/banner.png" >
+    <img class="top-photo" src="img/Banner.png" >
       <a target="blank" href = "http://games.espn.com/ffl/leagueoffice?leagueId=51701&seasonId=2017">
         <img class="espn" src="img/espn.png" alt="ESPN Site Link">
       </a>
@@ -95,7 +95,7 @@
           </p>
         <h4>Combinations</h4>
           <a target="blank" href="https://docs.google.com/document/d/1KyR3sSisJ6sf_gMBjt2dbJL_kbR2iWZfGJdCbZXbubE/edit?usp=sharing">Link to Numbered Combinations</a>
-        <img class="lottery-photo" src="img/lottery.png" />
+        <img class="lottery-photo" src="img/Lottery.png" />
     </div>
 
 <!-- Scoring -->
