--- a/draft.html
+++ b/draft.html
@@ -28,7 +28,7 @@
 <!--Main Banner-->
 
   <div class="banner">
-    <img class="top-photo" src="img/banner.png" >
+    <img class="top-photo" src="img/Banner.png" >
       <a target="blank" href = "http://games.espn.com/ffl/leagueoffice?leagueId=51701&seasonId=2017">
         <img class="espn" src="img/espn.png" alt="ESPN Site Link">
       </a>
