updated keepers list

--- a/2018.html
+++ b/2018.html
@@ -133,8 +133,8 @@
           </p>
           <h4>Josh Staten</h4>
           <p>
-            1. <br />
-            2.
+            1. Christian McCaffrey - Rd 3 <br />
+            2. Josh Gordon - Rd 16
           </p>
           <h4>Michael Lofton</h4>
           <p>
