--- a/draft.html
+++ b/draft.html
@@ -360,7 +360,7 @@
           <td>305</td>
           <td>306</td>
           <td>307</td>
-          <td>308</td>
+          <td class="rb keeper">Christian McCaffrey</td>
           <td>309</td>
           <td>310</td>
           <td>311</td>
@@ -522,7 +522,7 @@
           <td>1411</td>
           <td>1410</td>
           <td>1409</td>
-          <td>1408</td>
+          <td class="blank-cell"><s>1408</s></td>
           <td>1407</td>
           <td>1406</td>
           <td>1405</td>
@@ -537,7 +537,7 @@
           <td>1502</td>
           <td>1503</td>
           <td>1504</td>
-          <td>1505</td>
+          <td class="blank-cell"><s>1505</s></td>
           <td>1506</td>
           <td>1507</td>
           <td>1508</td>
@@ -552,10 +552,10 @@
           <td>1611</td>
           <td>1610</td>
           <td>1609</td>
-          <td>1608</td>
+          <td class="blank-cell"><s>1608</s></td>
           <td>1607</td>
           <td>1606</td>
-          <td>1605</td>
+          <td class="wr keeper">Josh Gordon</td>
           <td>1604</td>
           <td>1603</td>
           <td>1602</td>
