draft keeper update

--- a/draft.html
+++ b/draft.html
@@ -363,7 +363,7 @@
           <td class="rb keeper">Christian McCaffrey</td>
           <td>309</td>
           <td>310</td>
-          <td>311</td>
+          <td class="wr keeper">Tyreke Hill</td>
           <td>312</td>
         </tr>
         <tr>
@@ -449,7 +449,7 @@
           <td>904</td>
           <td>905</td>
           <td>906</td>
-          <td>907 <sup>EB</sup></td>
+          <td>907<sup>EB</sup></td>
           <td>908</td>
           <td>909</td>
           <td>910</td>
@@ -498,7 +498,7 @@
           <td>1205</td>
           <td>1204</td>
           <td>1203</td>
-          <td>1202</td>
+          <td class="wr keeper">Julian Edelman</td>
           <td class="rb keeper">Alvin Kamara</td>
         </tr>
         <tr>
@@ -522,7 +522,7 @@
           <td>1411</td>
           <td>1410</td>
           <td>1409</td>
-          <td class="blank-cell"><s>1408</s></td>
+          <td>1408</td>
           <td>1407</td>
           <td>1406</td>
           <td>1405</td>
