--- a/2018.html
+++ b/2018.html
@@ -116,8 +116,8 @@
           </p>
           <h4>Ben Nohalty</h4>
           <p>
-            1. <br />
-            2.
+            1. Tyreek Hill - Rd 3 <br />
+            2. Julian Edelman - Rd 12
           </p>
           <h4>Frank White</h4>
           <p>
