--- a/2018.html
+++ b/2018.html
@@ -172,8 +172,8 @@
           </p>
           <h4>Justin Marshall</h4>
           <p>
-            1. <br />
-            2.
+            1. Leonard Fournette - Rd 2 <br />
+            2. Cooper Kupp - Rd 16
           </p>
         </div>
 		</div>
