--- a/draft.html
+++ b/draft.html
@@ -338,7 +338,7 @@
         </tr>
         <tr>
           <td>Round 2</td>
-          <td>212</td>
+          <td class="rb keeper">Leonard Fournette</td>
           <td>211</td>
           <td>210</td>
           <td>209</td>
@@ -548,7 +548,7 @@
         </tr>
         <tr>
           <td>Round 16</td>
-          <td>1612</td>
+          <td class="wr keeper">Cooper Kupp</td>
           <td>1611</td>
           <td>1610</td>
           <td>1609</td>
