--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <p><u>Rules</u> - This will show your our vast libary of rules, regulations, and scoring system.</p>
         <p><u>Members</u> - Nothing really here now, but will eventually have something.</p>
         <p>You can click on that fun little ESPN logo right below our bloated faces to go right to the League Home Page.</p>
-        <p class="center-text">Click on the "More" below to see last years keepers</p>
+        <!-- <p class="center-text">Click on the "More" below to see last years keepers</p>
         <button onclick="myFunction()">More</button>
         <div id="toggle" class="hidden">
-          <h5 class="center-text"><u>List of Unkeepable Players</u></h5>
-          <div class="keepers-2017">
+          <h5 class="center-text"><u>List of Unkeepable Players</u></h5> -->
+          <!-- <div class="keepers-2017">
             <ul>
               <li>Jay Ajayi</li>
               <li>Odell Beckham Jr.</li>
@@ -78,9 +78,9 @@
               <li>Mike Wallace</li>
               <li>Spencer Ware</li>
             </ul>
-          </div>
-		    </div>
-    </div>
+          </div> -->
+		    <!-- </div>
+    </div> -->
 
     <div class="secondary-content">
 
